--- a/site_production/sass/animations.scss
+++ b/site_production/sass/animations.scss
@@ -1,11 +1,11 @@
 // Animation loader
 @keyframes background-loader{
     0%{
-        background-color: white;
+        background-color: $cd-background;
         opacity: 1;
     }
     95%{
-       background-color: white;
+       background-color: $cd-background;
        opacity: 1;
     }
     100%{
@@ -95,7 +95,7 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 100%;
+    width: $width;
     height: 100%;
     color: white;
     border-radius: 25px;
@@ -125,7 +125,7 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 100%;
+    width: $width;
     height: 100%;
     color: white;
     border-radius: 25px;
@@ -187,7 +187,7 @@
         left: 50%;
         transform: translate(-50%, -50%) scale(0);
         opacity: 0;
-        transition: transform 0.5s $transition-curve, opacity 0.5s $transition-curve;
+        transition: transform 0.5s $transition-style, opacity 0.5s $transition-style;
 
         &.gradient {
         background: linear-gradient(180deg, #9356DC, #FF79DA);
