--- a/site_production/sass/header.scss
+++ b/site_production/sass/header.scss
@@ -59,7 +59,7 @@
         padding: 30px 0px 20px 0px;
         z-index: 2;
         position: relative;
-        box-shadow: 0px 5px 10px 0px #00000026;
+        box-shadow: 0px 5px 10px 0px $cd-shadow;
 
     }
     .header__location{
