--- a/site_production/sass/variables.scss
+++ b/site_production/sass/variables.scss
@@ -9,7 +9,7 @@ $cd-color--txt: black;
 $background-linear--button: linear-gradient(#FF79DA, #9356DC);
 $width: 100%;
 $cd-background--circle: #9356DC;
-$transition-curve: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+$transition-style: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
 
 
