--- a/sass/animations.scss
+++ b/sass/animations.scss
@@ -137,7 +137,7 @@
 .container__button:hover .button::before{
     opacity: 1;
 }
-// Animation pour commande de plat
+// Animation pour commande de plat checkbox
 
 .container__menu {
     input[type=checkbox] {
@@ -166,7 +166,7 @@
     input[type=checkbox]:checked + &__cards {
         width: 80%;
     }
-  }
+}
   // Transition coeur
 .heart__container{
     .heart__checkbox {
@@ -207,5 +207,77 @@
     }
     }
 }
+// Animation hover pour desktop
 
+@media (min-width: 1025px){
+  // Animation pour commande de plat
+    .container__menu {
+        input{
+        display:none;
+        }
+        i {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 0;
+            width: 0;
+            overflow: hidden;
+            transition: all 600ms ease-out;
+        }
+        input:hover + i {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 60px;
+        font-size: 20px;
+        height: auto;
+        background : #99E2D0;
+        color: white;
+        }
+        input:hover + &__cards {
+            width: 80%;
+        }
+    }
+// Animation du coeur hover desktop    
+    .heart__container{
+        .heart__checkbox {
+        display: none;
+        }
+    
+        .heart {
+        position: relative;
+        font-size: 20px;
+        cursor: pointer;
+        overflow: hidden;
+        width: 25px;
+    
+        .heart-filled {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            opacity: 0;
+            transition: transform 0.5s $transition-style, opacity 0.5s $transition-style;
+    
+            &.gradient {
+            background: linear-gradient(180deg, #9356DC, #FF79DA);
+            background-clip: text;
+            color: transparent;
+            }
+        }
+        }
+    
+        .heart__checkbox:hover + .heart {
+        .heart-filled {
+            transform: translate(-50%, -50%) scale(1);
+            opacity: 1;
+        }
+    
+        .heart-empty {
+            opacity: 0;
+        }
+        }
+    }
+}
 
