--- a/sass/body.scss
+++ b/sass/body.scss
@@ -118,6 +118,7 @@ body{
             z-index: 0;
             width: 40%;
             position: relative;
+            margin-top: 30px;
             & a{
                 text-decoration: none;
                 color: $cd-color--txt;
