--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -777,6 +777,7 @@ body{
             z-index: 0;
             width: 90%;
             position:relative;
+            margin-top: 30px;
             & a{
                 text-decoration: none;
                 color: $cd-color--txt;
