--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -967,6 +967,7 @@ body {
     z-index: 0;
     width: 90%;
     position: relative;
+    margin-top: 30px;
   }
   .restaurants__cards__add a {
     text-decoration: none;
