Finalisation des correction d'erreur W3c

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -338,10 +338,9 @@ body {
   }
   .restaurants__cards__description {
     background-color: white;
-    border-radius: 0px 0px 20px 20px;
+    border-radius: 20px;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
     z-index: 0;
-    height: 80px;
     width: 100%;
   }
   .restaurants__cards__description__heart {
@@ -692,10 +691,9 @@ body {
   }
   .restaurants__cards__description {
     background-color: white;
-    border-radius: 0px 0px 20px 20px;
+    border-radius: 20px;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
     z-index: 0;
-    height: 80px;
     width: 100%;
   }
   .restaurants__cards__description__heart {
@@ -1035,10 +1033,9 @@ body {
   }
   .restaurants__cards__description {
     background-color: white;
-    border-radius: 0px 0px 20px 20px;
+    border-radius: 20px;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
     z-index: 0;
-    height: 80px;
     width: 100%;
   }
   .restaurants__cards__description__heart {
