--- a/sass/body.scss
+++ b/sass/body.scss
@@ -184,10 +184,9 @@ body{
             }
             &__description{
                 background-color: $cd-background;
-                border-radius: 0px 0px 20px 20px;
+                border-radius: 20px;
                 box-shadow: 0px 4px 15px 0px $cd-shadow--secondary;
                 z-index: 0;
-                height: 80px;
                 width: 100%;
                 &__heart{
                     position: relative;
@@ -518,10 +517,9 @@ body{
             }
             &__description{
                 background-color: $cd-background;
-                border-radius: 0px 0px 20px 20px;
+                border-radius: 20px;
                 box-shadow: 0px 4px 15px 0px $cd-shadow--secondary;
                 z-index: 0;
-                height: 80px;
                 width: 100%;
                 &__heart{
                     position: relative;
@@ -844,10 +842,9 @@ body{
             }
             &__description{
                 background-color: $cd-background;
-                border-radius: 0px 0px 20px 20px;
+                border-radius: 20px;
                 box-shadow: 0px 4px 15px 0px $cd-shadow--secondary;
                 z-index: 0;
-                height: 80px;
                 width: $width;
                 &__heart{
                     position: relative;
