--- a/sass/body.scss
+++ b/sass/body.scss
@@ -96,7 +96,7 @@ body{
         &__title{
             padding: 60px  0px 25px 15px;
             & h2{
-                margin: 0px;
+                margin: 0px 0px 20px 45px;
             }
         }
         &__container__add{
@@ -429,7 +429,7 @@ body{
             display: flex;
             justify-content: center;
             & h2{
-                margin: 0px;
+                margin: 0px 0px 25px 0px;
             }
         }
         &__container__add{
