--- a/sass/body.scss
+++ b/sass/body.scss
@@ -29,7 +29,8 @@ body{
         }
         &__button{
             display: flex;
-            justify-content: center;
+            margin: 30px auto 0px auto;
+            width: 205px;
             @import "./button.scss";
         }
     }
@@ -315,8 +316,8 @@ body{
         }
     &__button{
         display: flex;
-        justify-content: center;
-        padding: 30px 0px 42px 0px;
+        margin: 30px auto 42px auto;
+        width: 205px;
         @import "./button.scss";
         & p{
             padding: 0px 40px 0px 40px;
@@ -352,7 +353,8 @@ body{
         }
         &__button{
             display: flex;
-            justify-content: center;
+            margin: 30px auto 0px auto;
+            width: 205px;
             @import "./button.scss";
         }
     }
@@ -365,7 +367,7 @@ body{
         align-content: center;
         flex-wrap: wrap;
         &__title{
-            padding: 20px 0px 13px 7%;
+            padding: 20px 0px 13px 0px;
             display: flex;
             justify-content: center;
             width: 70%;
@@ -648,8 +650,8 @@ body{
         }
     &__button{
         display: flex;
-        justify-content: center;
-        padding: 30px 0px 42px 0px;
+        margin: 30px auto 42px auto;
+        width: 205px;
         @import "./button.scss";
         & p{
             padding: 0px 40px 0px 40px;
@@ -689,6 +691,7 @@ body{
         &__button{
             display: flex;
             justify-content: center;
+            margin: 30px 25% 0px 25%;
             @import "./button.scss";
         }
     }
@@ -968,7 +971,8 @@ body{
     &__button{
         display: flex;
         justify-content: center;
-        padding: 30px 0px 42px 0px;
+        margin: 30px 50% 0px 50%;
+        padding-bottom: 40px;
         @import "./button.scss";
         & p{
             padding: 0px 40px 0px 40px;
